--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-numpy
-joblib
-scikit-learn
-vercel-python
+Flask==2.2.2
+numpy==1.23.4
+joblib==1.1.0
+scikit-learn==1.1.2
+vercel-python==0.3.0
