--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
       "src": "/(.*)",
       "dest": "app.py"
     }
-  ]
+  ],
+  "hooks": {
+    "build": "apt-get update && apt-get install -y python3-distutils && pip install -r requirements.txt"
+  }
 }
+
 
 
