--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.2.2
 gunicorn==20.1.0
 joblib==1.1.0
 numpy==1.23.4
-scikit-learn==1.1.2
+scikit-learn==1.1.3  # or a different compatible version
+
 
 
